PMforce/src/objects/Proposal_Version__c.object
<CustomObject>
    <fields>
        <fullName>Proposal__c</fullName>
        <label>Proposal</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Proposal Versions</relationshipLabel>
        <relationshipName>Proposal_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <label>Version Number</label>
        <precision>4</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Proposal Version</label>
    <nameField>
        <label>Proposal Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposal Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>